syntax = "proto3";

import "google/protobuf/empty.proto";

package space;

service SpaceApi {
  rpc ListDirectories(ListDirectoriesRequest) returns (ListDirectoriesResponse) {}
  rpc GetConfigInfo(google.protobuf.Empty) returns (ConfigInfoResponse) {}
  rpc GenerateKeyPair(GenerateKeyPairRequest) returns (GenerateKeyPairResponse) {}
  rpc GenerateKeyPairWithForce(GenerateKeyPairRequest) returns (GenerateKeyPairResponse) {}
  rpc Subscribe(google.protobuf.Empty) returns (stream FileEventResponse) {}
  rpc TxlSubscribe(google.protobuf.Empty) returns (stream TextileEventResponse) {}
  rpc OpenFile(OpenFileRequest) returns (OpenFileResponse) {}
  rpc AddItems(AddItemsRequest) returns (stream AddItemsResponse) {}
  rpc CreateFolder(CreateFolderRequest) returns (CreateFolderResponse) {}
  rpc ToggleFuseDrive(ToggleFuseRequest) returns (FuseDriveResponse) {}
  rpc GetFuseDriveStatus(google.protobuf.Empty) returns (FuseDriveResponse) {}

  // Identities
  rpc GetIdentityByUsername(GetIdentityByUsernameRequest) returns (GetIdentityByUsernameResponse) {}
  rpc CreateUsernameAndEmail(CreateUsernameAndEmailRequest) returns (CreateUsernameAndEmailResponse) {}

  // Vault
  rpc BackupKeysByPassphrase(BackupKeysByPassphraseRequest) returns (BackupKeysByPassphraseResponse) {}
  rpc RecoverKeysByPassphrase(RecoverKeysByPassphraseRequest) returns (RecoverKeysByPassphraseResponse) {}

  // Sharing
  rpc ShareBucketViaEmail(ShareBucketViaEmailRequest) returns (ShareBucketViaEmailResponse) {}
  rpc ShareBucketViaIdentity(ShareBucketViaIdentityRequest) returns (ShareBucketViaIdentityResponse) {}
  rpc GenerateFileShareLink(GenerateFileShareLinkRequest) returns (GenerateFileShareLinkResponse) {}
}

message ListDirectoriesRequest {}

message ListDirectoryEntry {
  string path = 1;
  bool isDir = 2;
  string name = 3;
  string sizeInBytes = 4;
  string created = 5;
  string updated = 6;
  string fileExtension = 7;
  string ipfsHash = 8;
}


message ListDirectoriesResponse {
  repeated ListDirectoryEntry entries = 1;
}

message ConfigInfoResponse {
  string port = 1;
  string appPath = 2;
}

message GenerateKeyPairRequest {}

message GenerateKeyPairResponse {
  string publicKey = 1;
  string privateKey = 2;
}

enum EventType {
  ENTRY_ADDED = 0;
  ENTRY_DELETED = 1;
  ENTRY_UPDATED = 2;
}

message FileEventResponse {
  EventType type = 1;
  ListDirectoryEntry entry = 2;
}

message TextileEventResponse {
  string bucket = 1;
}

message OpenFileRequest {
  string path = 1;
}

message OpenFileResponse {
  string location = 1;
}

message AddItemsRequest {
  repeated string sourcePaths = 1; // full paths to file or Folder on FS. Needs to be a location available to the daemon
  string targetPath = 2; // target path in bucket.
}

message AddItemResult {
  string sourcePath= 1;
  string bucketPath = 2;
  string error = 3;
}

message AddItemsResponse {
  AddItemResult result = 1;
  int64 totalFiles = 2;
  int64 totalBytes = 3;
  int64 completedFiles = 4;
  int64 completedBytes = 5;
}

message CreateFolderRequest {
  string path = 1; // target path in bucket to add new empty folder
}
// not sure we need to return anything other than an error if we failed
message CreateFolderResponse {
}

message GetIdentityByUsernameRequest {
  string username = 1;
}

message Identity {
  string address = 1;
  string publicKey = 2;
  string username = 3;
}

message GetIdentityByUsernameResponse {
  Identity identity = 1;
}

message CreateUsernameAndEmailRequest {
  string username = 1;
  string email = 2; // Optional. Send "" to skip.
}

message CreateUsernameAndEmailResponse {}

message BackupKeysByPassphraseRequest {
  string passphrase = 1;
}

message BackupKeysByPassphraseResponse {}

message RecoverKeysByPassphraseRequest {
  string passphrase = 1;
}

message RecoverKeysByPassphraseResponse {}

message ShareBucketViaEmailRequest {
  string bucket = 1;
  string email = 2;
}

message ShareBucketViaEmailResponse {}

enum IdentityType {
  USERNAME = 0;
  EMAIL = 1;
}

message ShareBucketViaIdentityRequest {
  IdentityType identityType = 1;
  string identityValue = 2; // E.g. if identityType is USERNAME, identityValue is the actual username
  string bucket = 3;
}

message ShareBucketViaIdentityResponse {}

message GenerateFileShareLinkRequest {
  string bucket = 1;
  string filePath = 2;
}

message GenerateFileShareLinkResponse {
  string link = 1;
}

message ToggleFuseRequest {
  bool mountDrive = 1;
}

message FuseDriveResponse {
  bool fuseDriveMounted = 1;
}
